--- a/src/pages/CadastroCategoria/cadastroCategoria.css
+++ b/src/pages/CadastroCategoria/cadastroCategoria.css
@@ -1,14 +1,13 @@
 .container-categoria {
-    position: relative;
     display: flex; 
     justify-content: center;
-    align-items: flex-start; 
-    background-image: url('/imagens/backgroundCadUsuario.png');
+    align-items: center; 
+    background-color: #9da0a5;    
     border-radius: 4px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    padding: 30px;
-    width: 100%;
-    box-sizing: border-box; 
+    width: auto;
+    height: 650px;
+    
     
 }
 
@@ -22,17 +21,6 @@
     
 }
 
-.lista-container {
-    flex: 1; 
-    padding: 20px;    
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #f1f1f1; 
-    max-width: 650px;
-    max-height: 1500px; 
-    overflow-y: auto; 
-    margin-top: 40px;
-}
 
 h2 {
     color: rgb(49, 48, 48);
@@ -51,7 +39,7 @@ h2 {
 .header {
     display: block ;
     align-items: center; 
-    justify-content: flex-start; 
+    justify-content: center; 
     
 }
 
@@ -63,52 +51,15 @@ h2 {
 
 .lista-categorias {
     flex: 1;
-    background-color: #f1f1f1; 
-    padding: 20px;    
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow-x: auto;
-    overflow-y: auto; 
-    max-height: 300px; 
-    transition: transform 0.3s; 
-    max-width: 650px;
-    transition: transform 0.3s;
+    width: 100%;
+    max-width: 1000px;
+    flex-grow: 1; 
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .lista-categorias:hover {
     transform: scale(1.02);
-}
-
-.lista-categorias ul {
-    list-style: none;
-    padding: 0;
-    margin: 0; 
-}
-
-.lista-categorias li {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #eaeaea;
-    border-radius: 5px;
-    position: relative; 
-    transition: background-color 0.3s; 
-}
-
-.lista-categorias li:hover {
-    background-color: #d1d1d1; 
-}
-
-.lista-categorias li::before {
-    content: "✔️"; 
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%); 
-}
-
-.lista-categorias li:not(:last-child) {
-    border-bottom: 1px solid #ccc; 
-    padding-bottom: 5px; 
 }
 
 .formulario select {
