--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -3,7 +3,7 @@
         justify-content: center; 
         align-items: flex-start;
         height: 50vh; 
-        background-color: #8cbabd;
+        background-color: #898e8f;
         max-width: 100%;
         padding: 0;
     }
