--- a/src/pages/CadastroCategoria/cadastroCategoria.css
+++ b/src/pages/CadastroCategoria/cadastroCategoria.css
@@ -2,11 +2,11 @@
     display: flex; 
     justify-content: center;
     align-items: center; 
-    background-color: #9da0a5;    
     border-radius: 4px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     width: auto;
     height: 650px;
+    background-color: #b4b4b4;
     
     
 }
@@ -22,21 +22,16 @@
 }
 
 
-h2 {
-    color: rgb(49, 48, 48);
-    text-align: center;
-    margin: 0; 
-    width: 100%;
-}
 
-.header h2 {
+
+.header-categoria h2 {
     color: rgb(49, 48, 48);
     text-align: center; 
     font-size: 36px;
 }
 
 
-.header {
+.header-categoria {
     display: block ;
     align-items: center; 
     justify-content: center; 
