--- a/src/pages/ListaCategorias/listaCategorias.css
+++ b/src/pages/ListaCategorias/listaCategorias.css
@@ -1,6 +1,6 @@
 .categoria-container {
     padding: 20px;
-    background-color: #999898;
+    background-color: #8f8b8b;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-left: 150px;
@@ -19,13 +19,13 @@
 
 .titulo-categorias h1 {
     color: rgb(255, 255, 255);
-    font-size: 24px;
+    font-size: 36px;
 }
 
 .filter-container {
     margin-bottom: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     gap: 10px;
 }
 
