--- a/src/pages/ContasReceber/contasReceber.css
+++ b/src/pages/ContasReceber/contasReceber.css
@@ -1,9 +1,9 @@
 .rel-receber-container {
     padding: 20px;
-    background-color: #f1f1f1;
+    background-color: #c0bebe;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 1800px;
+    width: 1450px;
     margin: 0 auto;
 }
 
