--- a/src/pages/Contas/contas.css
+++ b/src/pages/Contas/contas.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 20px;
     background-color: #e6f7f9;
-    min-height: 100vh;
+    min-height: auto;
 }
 
 .titulo-contas {
